add endpoint delete task
