# docs/swagger.json
@@ -1,20 +1,15 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "Esta API gerencia uma lista de tarefas.",
-        "title": "Todo List API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "email": ""
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
+        "description": "API feita em Golang para gerenciamento de tarefas",
+        "title": "API TodoList GO",
+        "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "todolistgo-57814d96dd24.herokuapp.com",
     "basePath": "/",
     "paths": {
         "/tasks": {
@@ -36,7 +31,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Task"
+                                "$ref": "#/definitions/taskdomain.Task"
                             }
                         }
                     },
@@ -70,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Task"
+                            "$ref": "#/definitions/taskdomain.Task"
                         }
                     }
                 ],
@@ -78,7 +73,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Task"
+                            "$ref": "#/definitions/taskdomain.Task"
                         }
                     },
                     "400": {
@@ -163,19 +158,71 @@
                     }
                 }
             }
+        },
+        "/tasks/{id}": {
+            "delete": {
+                "description": "Deleta uma tarefa existente",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Deleta uma tarefa",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID da Tarefa",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "handlers.UpdateTaskStatusRequest": {
             "type": "object",
             "properties": {
-                "completed": {
-                    "type": "boolean",
-                    "example": true
+                "status": {
+                    "type": "string"
                 }
             }
         },
-        "models.Task": {
+        "taskdomain.Task": {
             "type": "object",
             "properties": {
                 "completed": {
